[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bongscript"
version = "1.0.0"
description = "বংScript — A Bengali Programming Language | বাংলায় প্রোগ্রামিং ভাষা"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
authors = [
    {name = "bongScript Team"}
]
keywords = ["bengali", "programming-language", "bangla", "interpreter", "bongscript"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Interpreters",
    "Natural Language :: Bengali",
]

[project.scripts]
bong = "bongscript.cli:main"

[project.urls]
Homepage = "https://github.com/bongscript/bongscript"
